--- a/src/lang/messages_cs.json
+++ b/src/lang/messages_cs.json
@@ -1,6 +1,4 @@
 {
   "navbar_home": "Domů",
-  "navbar_about": "O mně",
-  "navbar_projects": "Projekty",
-  "navbar_contact": "Kontakt"
+  "navbar_workouts": "Aktivity"
 }
