--- a/src/lang/messages_en.json
+++ b/src/lang/messages_en.json
@@ -1,6 +1,4 @@
 {
   "navbar_home": "Home",
-  "navbar_about": "About",
-  "navbar_projects": "Projects",
-  "navbar_contact": "Contact"
+  "navbar_workouts": "Activities"
 }
